force-app/main/default/objects/To_Do__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date of creation To-Do record.</description>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>