force-app/main/default/objects/To_Do__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
                <default>true</default>
                <label>Assigned</label>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Ended- Successful</fullName>
            </value>
            <value>
                <fullName>Ended- Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>