force-app/main/default/objects/To_Do__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Make a sales plan</fullName>
            </value>
            <value>
                <fullName>Develop a business process</fullName>
            </value>
            <value>
                <fullName>Hold a meeting</fullName>
            </value>
            <value>
                <fullName>Make a report</fullName>
            </value>
            <value>
                <fullName>Analyze the market</fullName>
            </value>
            <value>
                <fullName>Interact with the client</fullName>
            </value>
            <value>
                <fullName>Analyze the competitive environment</fullName>
            </value>
            <value>
                <fullName>Process applications</fullName>
            </value>
            <value>
                <fullName>Enter data into CRM</fullName>
            </value>
            <value>
                <fullName>Сonsider a claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>