force-app/main/default/objects/To_Do__c/recordTypes/Lead_Type.recordType-meta.xml
<RecordType>
    <fullName>Lead_Type</fullName>
    <active>true</active>
    <label>Lead Type</label>
</RecordType>