force-app/main/default/objects/To_Do__c/recordTypes/Marketing_Specialist_Type.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Specialist_Type</fullName>
    <active>true</active>
    <label>Marketing Specialist Type</label>
</RecordType>