force-app/main/default/objects/To_Do__c/recordTypes/Personal.recordType-meta.xml
<RecordType>
    <fullName>Personal</fullName>
    <active>true</active>
    <label>Personal</label>
</RecordType>