force-app/main/default/objects/To_Do__c/recordTypes/Sales_Manager_Type.recordType-meta.xml
<RecordType>
    <fullName>Sales_Manager_Type</fullName>
    <active>true</active>
    <label>Sales Manager Type</label>
</RecordType>