force-app/main/default/objects/To_Do__c/recordTypes/With_Mentoring.recordType-meta.xml
<RecordType>
    <fullName>With_Mentoring</fullName>
    <active>false</active>
    <label>With Mentoring</label>
</RecordType>