force-app/main/default/objects/To_Do__c/validationRules/End_Date_Later_Than_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Later_Than_Start</fullName>
    <active>true</active>
    <description>Check if end date later than start date.</description>
    <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date should be later than Start Date</errorMessage>
</ValidationRule>