force-app/main/default/objects/To_Do__c/validationRules/Start_Date_in_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_in_Past</fullName>
    <active>false</active>
    <errorConditionFormula>Start_Date__c &lt; CreatedDate</errorConditionFormula>
    <errorMessage>Start date should be now or in future.</errorMessage>
</ValidationRule>