force-app/main/default/objects/To_Do__c/listViews/Lead_To_Do.listView-meta.xml
<ListView>
    <fullName>Lead_To_Do</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>To_Do__c.Lead_Type</value>
    </filters>
    <label>Lead To-Do</label>
</ListView>