force-app/main/default/objects/To_Do__c/listViews/Marketing_Specialist_Queue_To_Do.listView-meta.xml
<ListView>
    <fullName>Marketing_Specialist_Queue_To_Do</fullName>
    <filterScope>Queue</filterScope>
    <label>Marketing Specialist Queue</label>
    <queue>Marketing_Specialist_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>