force-app/main/default/objects/To_Do__c/listViews/Mentor_Approval_Queue_To_Do.listView-meta.xml
<ListView>
    <fullName>Mentor_Approval_Queue_To_Do</fullName>
    <filterScope>Queue</filterScope>
    <label>Mentor Approval Queue</label>
    <queue>Mentor_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>