force-app/main/default/objects/To_Do__c/listViews/Sales_Manager_Queue_To_Do.listView-meta.xml
<ListView>
    <fullName>Sales_Manager_Queue_To_Do</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Manager Queue</label>
    <queue>Sales_Manager_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>